--- a/Info.plist
+++ b/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
+	<key>CFBundleIdentifier</key>
+	<string></string>
 	<key>GADIsAdManagerApp</key>
 	<true/>
 	<key>GADApplicationIdentifier</key>
@@ -19,6 +25,11 @@
 	<string>Heatmapper needs your location to record workout routes when running in the background (e.g. with the screen off)</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Heatmapper needs access to your motion to record intervals</string>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>location-services</string>
+		<string>gps</string>
+	</array>
 	<key>Privacy – Health Share Usage Description</key>
 	<string>Heatmapper needs access to read your Health data in order to calculate calories used</string>
 	<key>Privacy – Health Update Usage Description</key>
