--- a/Heatmapper WatchKit Extension/Info.plist
+++ b/Heatmapper WatchKit Extension/Info.plist
@@ -43,6 +43,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
+		<string>workout-processing</string>
 	</array>
 	<key>WKExtensionDelegateClassName</key>
 	<string>$(PRODUCT_MODULE_NAME).ExtensionDelegate</string>
