Commit prior to changing Heatmapper to try covering the map with a tile

--- a/Info.plist
+++ b/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Heatmapper wants to save to your Camera Roll</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
