CloudKit delay issues still but checking in in case it's bye bye lappy

--- a/Info.plist
+++ b/Info.plist
@@ -6,7 +6,9 @@
 	<string>Heatmapper wants to save to your Camera Roll</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>processing</string>
 		<string>location</string>
+		<string>remote-notification</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string></string>
