--- a/Heatmapper/Info.plist
+++ b/Heatmapper/Info.plist
@@ -68,6 +68,7 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>processing</string>
 		<string>fetch</string>
 		<string>location</string>
 		<string>remote-notification</string>
